-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
3
-
15173
In lmv_revalidate_slaves() it may happen that md_intent_lock() fails but leaves us with a reference to the request. In this case the request will be leaked:
rc = md_intent_lock(tgt->ltd_exp, op_data, &it, &req,
cb_blocking, extra_lock_flags);
if (rc < 0)
GOTO(cleanup, rc);
...
cleanup:
OBD_FREE_PTR(op_data);
RETURN(rc);
}