lustre/lmv/lmv_intent.c
@@ -159,6 +159,7 @@ int lmv_revalidate_slaves(struct obd_export *exp, struct mdt_body *mbody,
 {
 	struct obd_device      *obd = exp->exp_obd;
 	struct lmv_obd         *lmv = &obd->u.lmv;
+	struct ptlrpc_request	*req = NULL;
 	struct mdt_body		*body;
 	struct md_op_data      *op_data;
 	unsigned long           size = 0;
@@ -186,7 +187,6 @@ int lmv_revalidate_slaves(struct obd_export *exp, struct mdt_body *mbody,
 	for (i = 0; i < lsm->lsm_md_stripe_count; i++) {
 		struct lu_fid		fid;
 		struct lookup_intent	it = { .it_op = IT_GETATTR };
-		struct ptlrpc_request	*req = NULL;
 		struct lustre_handle	*lockh = NULL;
 		struct lmv_tgt_desc	*tgt = NULL;
 		struct inode		*inode;
@@ -209,6 +209,11 @@ int lmv_revalidate_slaves(struct obd_export *exp, struct mdt_body *mbody,
 
 		CDEBUG(D_INODE, "Revalidate slave "DFID" -> mds #%d\n",
 		       PFID(&fid), tgt->ltd_idx);
+
+		if (req != NULL) {
+			ptlrpc_req_finished(req);
+			req = NULL;
+		}
 
 		rc = md_intent_lock(tgt->ltd_exp, op_data, &it, &req,
 				    cb_blocking, extra_lock_flags);
@@ -233,9 +238,6 @@ int lmv_revalidate_slaves(struct obd_export *exp, struct mdt_body *mbody,
 				       PFID(&lsm->lsm_md_oinfo[i].lmo_fid),
 				       PFID(&lsm->lsm_md_oinfo[0].lmo_fid));
 
-				if (req != NULL)
-					ptlrpc_req_finished(req);
-
 				if (it.d.lustre.it_lock_mode && lockh) {
 					ldlm_lock_decref(lockh,
 						 it.d.lustre.it_lock_mode);
@@ -251,9 +253,6 @@ int lmv_revalidate_slaves(struct obd_export *exp, struct mdt_body *mbody,
 			LTIME_S(inode->i_atime) = body->mbo_atime;
 			LTIME_S(inode->i_ctime) = body->mbo_ctime;
 			LTIME_S(inode->i_mtime) = body->mbo_mtime;
-
-			if (req != NULL)
-				ptlrpc_req_finished(req);
 		}
 
 		md_set_lock_data(tgt->ltd_exp, &lockh->cookie, inode, NULL);
@@ -297,6 +296,9 @@ int lmv_revalidate_slaves(struct obd_export *exp, struct mdt_body *mbody,
 		mbody->mbo_mtime = mtime;
 	}
 cleanup:
+	if (req != NULL)
+		ptlrpc_req_finished(req);
+
 	OBD_FREE_PTR(op_data);
 	RETURN(rc);
 }
